# OmniLink

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml  omnilink.key.pub
.github/workflows/: ci.yml  release.yml
crates/omnilink-cli/: Cargo.toml
crates/omnilink-cli/src/: main.rs
crates/omnilink-core/: Cargo.toml
crates/omnilink-core/src/: app_discovery.rs  checker.rs  credential.rs  lib.rs  session.rs  stats.rs  sysproxy.rs
crates/omnilink-core/src/config/: mod.rs
crates/omnilink-core/src/dns/: mod.rs
crates/omnilink-core/src/proxy/: chain.rs  http.rs  https.rs  mod.rs  socks4.rs  socks5.rs  ssh.rs
crates/omnilink-core/src/rule/: mod.rs
crates/omnilink-ebpf/: Cargo.toml
crates/omnilink-ebpf-common/: Cargo.toml
crates/omnilink-ebpf-common/src/: lib.rs
crates/omnilink-ebpf/src/: main.rs
crates/omnilink-tun/: Cargo.toml
crates/omnilink-tun/src/: device.rs  dns_intercept.rs  interceptor.rs  lib.rs  nat.rs  packet.rs  process.rs
crates/omnilink-tun/src/linux/: ebpf_interceptor.rs  interceptor.rs  mod.rs
crates/omnilink-tun/src/macos/: interceptor.rs  mod.rs  ne_interceptor.rs  pf_helper.rs  pf_interceptor.rs  pf_sys.rs  privilege.rs  utun.rs
crates/omnilink-tun/src/windows/: interceptor.rs
omnilink-ne/: Package.swift  README.md
omnilink-ne/OmniLinkApp/: ExtensionManager.swift  Info.plist  OmniLinkApp.entitlements  XPCClient.swift
omnilink-ne/OmniLinkExtension/: Info.plist  OmniLinkExtension.entitlements  TransparentProxyProvider.swift  XPCBridge.swift
omnilink-ne/OmniLinkHelper/: main.swift
omnilink-ne/Shared/: Messages.swift  XPCProtocol.swift
omnilink-ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
omnilink-ui/src/: App.tsx  main.tsx  styles.css  types.ts
omnilink-ui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
omnilink-ui/src-tauri/capabilities/: default.json
omnilink-ui/src-tauri/icons/: icon.icns
omnilink-ui/src-tauri/src/: lib.rs  main.rs
omnilink-ui/src/components/: AppsView.tsx  ConnectionsView.tsx  ProxiesView.tsx  RulesView.tsx  SettingsView.tsx  Toast.tsx  TrafficView.tsx  UpdateNotification.tsx
omnilink-ui/src/hooks/: useToast.ts  useUpdater.ts
omnilink-wfp/: README.md
omnilink-wfp/driver/: driver.c  driver.h  driver.inf
omnilink-wfp/service/: Cargo.toml
omnilink-wfp/service/src/: main.rs  wfp_client.rs
