[workspace]
resolver = "2"
members = [
    "crates/omnilink-core",
    "crates/omnilink-tun",
    "crates/omnilink-cli",
    "crates/omnilink-ebpf-common",
    "omnilink-ui/src-tauri",
]
exclude = [
    "crates/omnilink-ebpf",
    "omnilink-wfp/service",
]
# Note: crates/omnilink-ebpf is NOT a workspace member.
# It targets bpfel-unknown-none and must be built separately:
#   cargo +nightly build -p omnilink-ebpf --target bpfel-unknown-none -Z build-std=core

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bytes = "1"
ipnet = "2"
regex = "1"
tracing-appender = "0.2"
