[package]
name = "omnilink-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
bytes = { workspace = true }
ipnet = { workspace = true }
regex = { workspace = true }
russh = "0.46"
async-trait = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
keyring = "3"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
