[package]
name = "omnilink-tun"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
omnilink-core = { path = "../omnilink-core" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
