[package]
name = "omnilink-tun"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
omnilink-core = { path = "../omnilink-core" }
dashmap = "6"
async-trait = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }
omnilink-ebpf-common = { path = "../omnilink-ebpf-common", features = ["user"], optional = true }

[features]
default = []
ebpf = ["aya", "omnilink-ebpf-common"]
