[package]
name = "omnilink-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnilink_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
omnilink-core = { path = "../../crates/omnilink-core" }
