[package]
name = "omnilink-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnilink_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
tokio-util = "0.7"
omnilink-core = { path = "../../crates/omnilink-core" }
omnilink-tun = { path = "../../crates/omnilink-tun" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
